--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* body {
-  display: flex;
+body {
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100vh; */
   margin: 0;
   background-color: #f0f0f0;
   font-family: 'Montserrat', sans-serif;
-} */
+}
 
 .fancy-text {
   font-size: 2rem;
